@@ -1,4 +1,5 @@
 # Run CI for R using https://eddelbuettel.github.io/r-ci/
+# This file is a slight variant by running a matrix of containers
 
 name: ci
 
@@ -12,7 +13,12 @@ env:
 
 jobs:
   ci:
+
     runs-on: ubuntu-latest
+
+    container:
+      image: ${{ matrix.cntr }}
+
     strategy:
       matrix:
         include:
@@ -44,17 +50,14 @@ jobs:
       #    chmod 0755 run.sh
       #    ./run.sh bootstrap
 
-      - name: Container
-        run: docker pull ${{ matrix.cntr }}
-
       - name: SessionInfo
-        run: docker run --rm -i -v ${PWD}:/mnt -w /mnt ${{ matrix.cntr }} ${{ matrix.r }} -q -e 'sessionInfo()'
+        run: ${{ matrix.r }} -q -e 'sessionInfo()'
 
       - name: Build
-        run: docker run --rm -i -v ${PWD}:/mnt -w /mnt ${{ matrix.cntr }} ${{matrix.r }} CMD build --no-build-vignettes --no-manual .
+        run: ${{matrix.r }} CMD build --no-build-vignettes --no-manual .
 
       - name: Check
-        run: docker run --rm -i -v ${PWD}:/mnt -w /mnt -e CI=true ${{ matrix.cntr }} ${{ matrix.r }} CMD check --no-vignettes --no-manual Rcpp_*.tar.gz
+        run: ${{ matrix.r }} CMD check --no-vignettes --no-manual Rcpp_*.tar.gz
 
   #covr:
   #  runs-on: ubuntu-latest
